--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
 # Core Django
-Django==5.2.1
-gunicorn==21.2.0
+Django>=5.2.0
+gunicorn>=21.2.0
 
 # Static files
-whitenoise==6.6.0
+whitenoise>=6.6.0
 
 # Database (PostgreSQL support - optional, can use SQLite)
-psycopg2-binary==2.9.9
+psycopg2-binary>=2.9.9
 
 # Computer Vision & AI
-opencv-python-headless==4.9.0.80
-mediapipe==0.10.9
-numpy==1.26.3
+opencv-python-headless>=4.9.0
+mediapipe>=0.10.9
+numpy>=1.26.0
 
 # LangChain & AI
-langchain-groq==0.1.3
-langchain-core==0.1.23
+langchain-groq>=0.1.3
+langchain-core>=0.1.23
 
 # Communication
-twilio==8.13.0
+twilio>=8.13.0
 
 # Environment Variables
-python-decouple==3.8
+python-decouple>=3.8
 
 # Utilities
-pillow==10.2.0
+pillow>=11.0.0
